--- a/index.css
+++ b/index.css
@@ -14,6 +14,11 @@
     color: salmon;
 }
 
+.skillImg {
+    width: 100px;
+    height: auto;
+}
+
 body {
     background-color: whitesmoke;
     display: flex;
@@ -21,7 +26,7 @@ body {
 }
 
 .header {
-    background-color: steelblue;
+    background-color: mediumaquamarine;
     height: 100vh;
     width: 300px;
     transition: 1s ease-in-out all;
@@ -45,6 +50,15 @@ body {
     width: 200px;
     justify-content: space-between;
     color: whitesmoke;
+
+}
+
+.link span a {
+    transition: 0.3s all ease-in-out;
+}
+
+.link span a:hover {
+    color: salmon;
 }
 
 .main {
@@ -63,7 +77,7 @@ body {
     font-weight: 600;
     position: fixed;
     top: 0px;
-    padding: 0px 120px;
+    padding: 0px 20vw;
     box-sizing: border-box;
 
     width: calc(100vw - 300px);
@@ -102,7 +116,7 @@ body {
 
 .main>div>div {
     font-size: 24px;
-    margin: 10px auto;
+    margin: 20px auto;
     width: 80%;
     display: flex;
     justify-content: space-between;
@@ -114,6 +128,12 @@ body {
     font-weight: 600;
     padding-bottom: 10px;
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+
+    transition: 0.3s ease-in-out all;
+}
+
+.title:hover {
+    color: salmon;
 }
 
 p {
@@ -131,8 +151,8 @@ p {
 
 #darkModeButton {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 5vh;
+    right: 5vw;
 
     font-size: 30px;
     display: flex;
