--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ body {
 }
 
 .main nav span:hover {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 
@@ -173,32 +173,51 @@ p {
         flex-direction: column;
     }
 
+    .profile {
+        position: absolute;
+        bottom: -150px;
+        left: 50px;
+        z-index: 100;
+        width: 200px;
+        height: 200px;
+    }
+
     .header {
+        position: relative;
+        align-items: flex-end;
+        padding-right: 50px;
+        box-sizing: border-box;
         width: 100vw;
-        height: 300px;
+        height: 200px;
+    }
+
+    .header>span:first-child {
+        padding-bottom: 20px;
     }
 
     .main {
         margin-top: 0px;
         width: 100%;
-        height: 100%;
+        height: auto;
         padding-bottom: 50px;
     }
 
     .main nav {
-        padding: 0 50px;
-        position: static;
-        top: 0px;
+        padding: 0;
+        padding-left: 250px;
+        padding-right: 20px;
+        position: sticky;
+        top: 0;
         width: 100%;
+        height: 100px;
+        font-size: 20px;
+    }
+
+    ::-webkit-scrollbar {
+        display: none;
     }
 
     .main div {
         width: 80%;
-    }
-
-    .profile {
-        margin: 20px;
-        width: 120px;
-        height: 120px;
     }
 }
