--- a/index.css
+++ b/index.css
@@ -4,6 +4,11 @@
     font-family: sans-serif;
     text-decoration: none;
     font-weight: 600;
+
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 .header a {
@@ -64,7 +69,7 @@ body {
 .main {
     margin-top: 70px;
     box-sizing: border-box;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: calc(100vh - 70px);
 
     width: calc(100vw - 300px);
@@ -176,24 +181,29 @@ p {
 
     .profile {
         position: absolute;
-        bottom: -150px;
-        left: 50px;
+        bottom: -30vw;
+        left: 10vw;
         z-index: 100;
-        width: 200px;
-        height: 200px;
+        width: 30vw;
+        height: 30vw;
+        box-sizing: border-box;
     }
 
     .header {
         position: relative;
         align-items: flex-end;
-        padding-right: 50px;
+        padding-right: 10vw;
         box-sizing: border-box;
         width: 100vw;
-        height: 200px;
+        height: 30vw;
+    }
+
+    .link {
+        width: 40vw;
     }
 
     .header>span:first-child {
-        padding-bottom: 20px;
+        padding-bottom: 15px;
     }
 
     .main {
@@ -201,22 +211,24 @@ p {
         width: 100%;
         height: auto;
         padding-bottom: 50px;
+        overflow: auto;
     }
 
     .main nav {
         padding: 0;
-        padding-left: 250px;
+        padding-left: 42vw;
         padding-right: 20px;
         position: sticky;
         top: 0;
         width: 100%;
-        height: 100px;
+        height: 20vw;
         font-size: 20px;
     }
 
-    ::-webkit-scrollbar {
-        display: none;
+    .main>div>div span {
+        font-size: 0.7em;
     }
+
 
     .main div {
         width: 80%;
